--- a/src/components/ListingContainer/ListingContainer.css
+++ b/src/components/ListingContainer/ListingContainer.css
@@ -1,8 +1,8 @@
 .ListingContainer {
     background-color: #fff;
     border-radius: 3px;
-    margin: 4em;
-    padding: 4em;
+    margin: 4%;
+    padding: 4%;
     border: 1px solid #ddd;
     box-shadow: 0px 2px 5px 2px rgba(160, 160, 160, 0.1)
 }
